# pinterest-clone-backend

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 74900af29e98_init.py  8edde8db6117_made_some_changes_to_models_collection_.py  9508e2ef5b88_changed_models_added_foreign_keys.py  caafbeb5aecf_bugfix_fixed_invalid_back_populates_.py  f45b3c706591_description_of_changes.py
app/: main.py
app/database/: crud.py  database.py  models.py
app/database/crud/: file_types_crud.py  pin_collection_associations_crud.py  pin_collections_crud.py  pin_tags_crud.py  pins_crud.py  relationship_types_crud.py  users_crud.py  users_relationships_crud.py  visibility_types_crud.py
app/database/models/: pin_model.py  user_model.py
app/fastapi/routers/: auth_router.py  pin_router.py  users_router.py
app/fastapi/schemas/: file_types_schemas.py  pin_collection_associations_schemas.py  pin_collections_schemas.py  pin_tags_schemas.py  pins_schemas.py  users_schemas.py  visibility_types_schemas.py
app/utils/: auth.py  config.json  config.py  jwt_utils.py
