[tool.poetry]
name = "pinterest-clone"
version = "0.1.0"
description = ""
authors = ["Ioplock <ioplock.me@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
uvicorn = {extras = ["standart"], version = "^0.34.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
